# particles

./: .gitignore  .gitmodules  CMakeLists.txt  app.cpp  app.hpp  fountain.cpp  main.cpp  particle.cpp  particle_pool.cpp  particles.hpp  random.hpp  static_obj.cpp
assets/models/: bricks.txt  floor.txt  fountain.txt
assets/shaders/: main.frag  object.frag  object.vert  particle.frag  particle.geom  particle.vert
shaders/: main.frag
